--- a/src/Belletrix/Views/ActivityLog/EditFieldsPartial.cshtml
+++ b/src/Belletrix/Views/ActivityLog/EditFieldsPartial.cshtml
@@ -1,4 +1,5 @@
-﻿@using Belletrix.Entity.ViewModel;
+﻿@using Belletrix.Entity.Enum;
+@using Belletrix.Entity.ViewModel;
 
 @model ActivityLogCreateViewModel
 
@@ -14,7 +15,7 @@
                     <div class="col-lg-12">
                         <div class="form-group has-error">
                             @Html.LabelFor(x => x.Title)
-                            @Html.TextBoxFor(x => x.Title, new { @class = "form-control" })
+                            @Html.TextBoxFor(x => x.Title, new { @class = "form-control", autofocus = "autofocus" })
                         </div>
                         <div class="form-group input-group-sm reducePadding">
                             @Html.TextBoxFor(x => x.Title2, new { @class = "form-control" })
@@ -35,7 +36,11 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="form-group" data-toggle="buttons">
+                        <div class="form-group">
+                            @Html.LabelFor(x => x.Types)
+                            @*Html.EnumDropDownListFor(x => x.Types, new { @class = "form-control", multiple = "multiple" })*@
+                            @Html.DropDownListFor(x => x.Types, EnumHelper.GetSelectList(typeof(ActivityLogTypes)), null, new { @class = "form-control multiselect", multiple = "multiple" })
+                            @Html.ValidationMessageFor(x => x.Types)
                             @*
                                 <label class="btn btn-default btn-xs">
                                     @Html.HiddenFor(x => x.Types[(int)ActivityLogTypes.Conference].Id)
