--- a/src/Belletrix/Views/ActivityLog/Edit.cshtml
+++ b/src/Belletrix/Views/ActivityLog/Edit.cshtml
@@ -1,5 +1,4 @@
-﻿@using Belletrix.Entity.Enum;
-@using Belletrix.Entity.ViewModel;
+﻿@using Belletrix.Entity.ViewModel;
 
 @model ActivityLogEditViewModel
 
