--- a/src/Belletrix/Views/ActivityLog/EditFieldsPartial.cshtml
+++ b/src/Belletrix/Views/ActivityLog/EditFieldsPartial.cshtml
@@ -105,7 +105,14 @@
                 <h3 class="panel-title">Participants</h3>
             </div>
 
-            <div class="panel-body">
+            <div class="panel-body" id="participants-panel">
+                <div class="row last-row">
+                    <div class="col-lg-12">
+                        <div class="form-group">
+                            <button type="button" id="addPersonButton" class="btn btn-default btn-sm pull-right" data-toggle="modal" data-target="#personModal">Add Person</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
