Avoid WebApi since it'll be easier to utilize sessions

--- a/src/Belletrix/Views/ActivityLog/AddPersonPartial.cshtml
+++ b/src/Belletrix/Views/ActivityLog/AddPersonPartial.cshtml
@@ -7,8 +7,9 @@
     HtmlHelper.UnobtrusiveJavaScriptEnabled = true;
 }
 
-@using (Html.BeginRouteForm("DefaultApi", new { controller = "ActivityLog", httproute = "true" }))
+@using (Html.BeginForm("AddPerson", "ActivityLog"))
 {
+    @Html.AntiForgeryToken()
     @Html.HiddenFor(x => x.SessionId)
 
     <div class="modal-header">
