Add IoC and DI with Unity into the fold

--- a/src/Belletrix/Views/ActivityLog/Add.cshtml
+++ b/src/Belletrix/Views/ActivityLog/Add.cshtml
@@ -11,7 +11,7 @@
 @section FooterScript {
     <script>
         $(function () {
-            Belletrix.ActivityLog.init('@Url.Action("AddPerson", new { guid = Request.Params["guid"] })');
+            Belletrix.ActivityLog.init('@Url.Action("AddPerson", "ActivityLogPerson", new { guid = Request.Params["guid"] })');
         });
     </script>
 }
