--- a/src/Belletrix/Views/ActivityLogPerson/AddPerson.cshtml
+++ b/src/Belletrix/Views/ActivityLogPerson/AddPerson.cshtml
@@ -7,7 +7,7 @@
     HtmlHelper.UnobtrusiveJavaScriptEnabled = true;
 }
 
-@using (Html.BeginForm("AddPerson", "ActivityLog"))
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(x => x.SessionId)
@@ -19,11 +19,18 @@
     <div class="modal-body">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-12 has-error">
+                <div class="col-md-8 has-error">
                     <div class="form-group">
                         @Html.LabelFor(x => x.FullName)
                         @Html.TextBoxFor(x => x.FullName, new { @class = "form-control", autofocus = "autofocus" })
                         @Html.ValidationMessageFor(x => x.FullName)
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        @Html.LabelFor(x => x.Type)
+                        @Html.DropDownListFor(x => x.Type, (SelectList)ViewBag.TypesSelect, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(x => x.Type)
                     </div>
                 </div>
             </div>
