--- a/src/Belletrix/Views/ActivityLog/EditFieldsPartial.cshtml
+++ b/src/Belletrix/Views/ActivityLog/EditFieldsPartial.cshtml
@@ -106,6 +106,11 @@
             </div>
 
             <div class="panel-body" id="participants-panel">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <hr />
+                    </div>
+                </div>
                 <div class="row last-row">
                     <div class="col-lg-12">
                         <div class="form-group">
