--- a/src/Belletrix/Views/ActivityLogPerson/AddPerson.cshtml
+++ b/src/Belletrix/Views/ActivityLogPerson/AddPerson.cshtml
@@ -7,17 +7,16 @@
     HtmlHelper.UnobtrusiveJavaScriptEnabled = true;
 }
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    @Html.HiddenFor(x => x.SessionId)
+<div class="modal-body">
+    <div class="container-fluid">
+        <h3>Create New Person</h3>
+        <p>Create a new person and add them to this activity log.</p>
 
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="personModalLabel">Add Participant</h4>
-    </div>
-    <div class="modal-body">
-        <div class="container-fluid">
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+            @Html.HiddenFor(x => x.SessionId)
+
             <div class="row">
                 <div class="col-md-8 has-error">
                     <div class="form-group">
@@ -59,10 +58,36 @@
                     </div>
                 </div>
             </div>
-        </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <input type="submit" class="btn btn-primary pull-right" value="Add person" />
+                </div>
+            </div>
+        }
+
+        @if (((SelectList)ViewBag.PeopleSelect).Count() > 0)
+        {
+            <h3>Choose Existing Person</h3>
+            <p>Choose a person that was entered from before.</p>
+
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        @Html.Label("existingpersonselect", "Person")
+                        @Html.DropDownList("existingpersonselect", (SelectList)ViewBag.PeopleSelect, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        @Html.Label("existingpersontype", "Type")
+                        @Html.DropDownList("existingpersontype", (SelectList)ViewBag.TypesSelect, new { @class = "form-control" })
+                    </div>
+                </div>
+            </div>
+            <input type="submit" class="btn btn-primary pull-right" value="Use selected" id="existingpersonsubmit" />
+        }
     </div>
-    <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <input type="submit" class="btn btn-primary" value="Save changes" />
-    </div>
-}
+</div>
+<div class="modal-footer">
+    <button type="button" class="btn btn-default" data-dismiss="modal">Close window</button>
+</div>
