--- a/src/Belletrix/Views/ActivityLog/Add.cshtml
+++ b/src/Belletrix/Views/ActivityLog/Add.cshtml
@@ -19,6 +19,7 @@
         Belletrix.ActivityLog.init(
             '@Url.Action("AddPerson", "ActivityLogPerson", new { guid = sessionId })',
             '@Url.Action("AddPersonId", "ActivityLogPerson")',
+            '@Url.Action("RemovePersonId", "ActivityLogPerson")',
             '@sessionId');
     });
     </script>
@@ -34,6 +35,7 @@
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
+        @Html.Hidden("SessionId", sessionId)
         @Html.Partial("EditFieldsPartial")
 
         <div class="row">
