Use session as participant workspace instead of expensive DB calls

--- a/src/Belletrix/Views/ActivityLog/Add.cshtml
+++ b/src/Belletrix/Views/ActivityLog/Add.cshtml
@@ -21,6 +21,9 @@
             '@Url.Action("AddPersonId", "ActivityLogPerson")',
             '@Url.Action("RemovePersonId", "ActivityLogPerson")',
             '@sessionId');
+
+        Belletrix.ActivityLog.initSession(
+            '@Url.Action("StartSession", "ActivityLogPerson", new { guid = sessionId })');
     });
     </script>
 }
