Fix missing "Add Person" dialog action when editing activities

--- a/src/Belletrix/Views/ActivityLog/Edit.cshtml
+++ b/src/Belletrix/Views/ActivityLog/Edit.cshtml
@@ -53,4 +53,11 @@
             </div>
         </div>
     }
+
+    <div class="modal fade" id="personModal" tabindex="-1" role="dialog" aria-labelledby="personModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+            </div>
+        </div>
+    </div>
 }
