--- a/src/Belletrix/Views/User/Login.cshtml
+++ b/src/Belletrix/Views/User/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Belletrix.Models;
 
-@model LoginModel
+@model LoginViewModel
 
 @{
     // http://support.appharbor.com/kb/tips-and-tricks/application-server-ips-ec2-configuration
