--- a/src/Belletrix/Views/ActivityLog/EditFieldsPartial.cshtml
+++ b/src/Belletrix/Views/ActivityLog/EditFieldsPartial.cshtml
@@ -7,7 +7,7 @@
     <div class="col-lg-6">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Activity Details</h3>
+                <h3 class="panel-title">Headings</h3>
             </div>
 
             <div class="panel-body">
@@ -16,16 +16,29 @@
                         <div class="form-group has-error">
                             @Html.LabelFor(x => x.Title)
                             @Html.TextBoxFor(x => x.Title, new { @class = "form-control", autofocus = "autofocus" })
-                        </div>
-                        <div class="form-group input-group-sm reducePadding">
-                            @Html.TextBoxFor(x => x.Title2, new { @class = "form-control" })
-                        </div>
-                        <div class="form-group input-group-sm reducePadding">
-                            @Html.TextBoxFor(x => x.Title3, new { @class = "form-control" })
                             @Html.ValidationMessageFor(x => x.Title)
+                        </div>
+                        <div class="form-group input-group-sm reducePadding">
+                            @Html.LabelFor(x => x.Title2)
+                            @Html.TextBoxFor(x => x.Title2, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(x => x.Title2)
+                        </div>
+                        <div class="form-group input-group-sm reducePadding">
+                            @Html.LabelFor(x => x.Title3)
+                            @Html.TextBoxFor(x => x.Title3, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(x => x.Title3)
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Activity Details</h3>
+            </div>
+
+            <div class="panel-body">
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="form-group">
