--- a/src/Belletrix/Views/Student/StudyAbroad.cshtml
+++ b/src/Belletrix/Views/Student/StudyAbroad.cshtml
@@ -4,7 +4,7 @@
 
 @model IEnumerable<StudyAbroadModel>
 
-<div class="table-responsive">
+<div>
     <br />
     <table id="studyabroad" class="table table-bordered table-hover table-striped tablesorter">
         <thead>
