--- a/src/Belletrix/Views/Note/List.cshtml
+++ b/src/Belletrix/Views/Note/List.cshtml
@@ -1,4 +1,5 @@
-﻿@using Belletrix.Models;
+﻿@using Belletrix.Entity.Model;
+@using Belletrix.Models;
 
 @model IEnumerable<NoteModel>
 
@@ -35,8 +36,8 @@
         <div class="list-group">
             <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">
-                    @note.CreatedBy.FirstName
-                    @note.CreatedBy.LastName
+                    @note.CreatedByFirstName
+                    @note.CreatedByLastName
                     @note.EntryDate.ToString("MMM d, yyyy h:mm:ss tt")
                 </h4>
                 <p class="list-group-item-text">@note.Note</p>
