--- a/src/Belletrix/Views/User/List.cshtml
+++ b/src/Belletrix/Views/User/List.cshtml
@@ -1,6 +1,6 @@
-﻿@using Belletrix.Models;
+﻿@using Belletrix.Entity.Model;
 
-@model IList<UserModel>
+@model IEnumerable<UserModel>
 
 @{
     ViewBag.Title = "UserList";
