--- a/src/Belletrix/Views/Promo/Form.cshtml
+++ b/src/Belletrix/Views/Promo/Form.cshtml
@@ -202,7 +202,7 @@
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         @Html.LabelFor(s => s.DateOfBirth)
-                                        @Html.EditorFor(s => s.DateOfBirth)
+                                        @Html.TextBoxFor(s => s.DateOfBirth, new { @class = "form-control" })
                                     </div>
                                 </div>
                             </div>
