--- a/src/Belletrix/Views/Student/Add.cshtml
+++ b/src/Belletrix/Views/Student/Add.cshtml
@@ -105,7 +105,7 @@
                             <div class="col-lg-12">
                                 <div class="form-group">
                                     @Html.LabelFor(s => s.DateOfBirth)
-                                    @Html.EditorFor(s => s.DateOfBirth)
+                                    @Html.TextBoxFor(s => s.DateOfBirth, new { @class = "form-control" })
                                 </div>
                             </div>
                         </div>
@@ -122,7 +122,7 @@
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     @Html.LabelFor(s => s.InitialMeeting)
-                                    @Html.EditorFor(s => s.InitialMeeting)
+                                    @Html.TextBoxFor(s => s.InitialMeeting, new { @class = "form-control" })
                                 </div>
                             </div>
                             <div class="col-lg-6">
