--- a/src/Belletrix/Views/User/List.cshtml
+++ b/src/Belletrix/Views/User/List.cshtml
@@ -19,7 +19,7 @@
 @section Body {
     <div class="row">
         <div class="col-lg-8">
-            <h1>Users <small>@Model.Count.ToString("N0") total</small></h1>
+            <h1>Users <small>@Model.Count().ToString("N0") total</small></h1>
         </div>
         <div class="col-lg-4 text-right">
             <a href="@Url.Action("Add", "User")"><i class="fa fa-plus-circle"></i> Add User</a>
